--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,6 +1,26 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
+
+.content,
+.media-object{
+  display: flex;
+}
+
+.content{
+  gap: 52px;
+}
+
+.media-object{
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
+}
+
+/* .text{
+  text-align: center;
+} */
 
 img {
   width: 100px;
@@ -8,8 +28,10 @@ img {
 }
 
 .title {
+  /* text-align: center; */
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
